# openshmem-tutorial

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
docs/: OPENSHMEM-Tutorial.pptx
examples/: Makefile.mk  sping.c
m4/: ax_use_library.m4
src/: Makefile.mk  shmem.c  shmem.h  shmem_impl.h
src/pm/: Makefile.mk  shmem_pm.h
src/pm/pmi/: Makefile.mk  pmi_loader.h  pmitest.c  shmem_pmi.c
